--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "Cevat Enes's Analytics Lab"
+  title: "Cevat's Analytics Lab"
   navbar:
     search: true
     left:
